# qa_prod

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
apps/account/: admin.py  apps.py  custom_exception.py  fields.py  forms.py  managers.py  models.py  permissions.py  signals.py  tests.py  utils.py
apps/stb_tester/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utlity.py  views.py
apps/stbs/: admin.py  apps.py  mixins.py  models.py  permissions.py  signals.py  tests.py
apps/testcases/: admin.py  apps.py  filters.py  managers.py  models.py  pagination.py  permissions.py  signals.py  tests.py  utlity.py
apps/utlity/: decorator.py
qa_portal/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
qa_portal/helpers/: ErrorHandlers.py  authentication.py  custom_generics.py  exceptions.py  renders.py
qa_portal/middleware/: exception.py  manitance.py
staticfiles/css/: 174.5b3e7e77.chunk.css  174.5b3e7e77.chunk.css.map  2.c364c6ba.chunk.css  2.c364c6ba.chunk.css.map  360.01649171.chunk.css  360.01649171.chunk.css.map  381.4f3bd63f.chunk.css  381.4f3bd63f.chunk.css.map  431.2272632f.chunk.css  431.2272632f.chunk.css.map  612.3faf4874.chunk.css  612.3faf4874.chunk.css.map  612.79aff1a3.chunk.css  612.79aff1a3.chunk.css.map  791.04e7a7e1.chunk.css  791.04e7a7e1.chunk.css.map  main.1e351240.css  main.1e351240.css.map  main.94a46b27.css  main.94a46b27.css.map
staticfiles/js/: 174.f15ee1c4.chunk.js  174.f15ee1c4.chunk.js.map  2.9dc68272.chunk.js  2.9dc68272.chunk.js.map  297.c2a15f47.chunk.js  (+21 more)
templates/: error404.html
(+16 files in other folders)
